package edu.hitsz.aircraft;

public interface Subscribe {
    void bomb();
}
